@@ -10,6 +10,7 @@ ChangeLog
    * (WIP) defragment
    * (WIP) cache to disk
    * fixed #348: added class const support for __FILE__ __DIR__
+   * closes #342: added support for object caching. handle IS_RESTORCE as interger
  * disassembler, decompiler:
    * PHP_5_6 support
  * misc:
